--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">C196 Lisa Dean</string>
+    <string name="start_date">Start Date</string>
+    <string name="enter_term_title">Enter term title</string>
+    <string name="end_date">End Date</string>
 </resources>
